fix(suiteheader): use spacing token in scss

--- a/src/components/SuiteHeader/_suite-header.scss
+++ b/src/components/SuiteHeader/_suite-header.scss
@@ -43,7 +43,7 @@
   }
 
   &--logout {
-    margin: -1rem;
+    margin: -$spacing-05;
 
     .#{$prefix}--btn {
       width: 100%;
